--- a/Wikipedia/Code/PageHistoryCountsViewController.xib
+++ b/Wikipedia/Code/PageHistoryCountsViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_9" orientation="landscape" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -25,28 +25,28 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zCN-kR-Ul8" userLabel="Title + Main Stats View">
-                    <rect key="frame" x="44" y="20" width="325" height="159.66666666666666"/>
+                    <rect key="frame" x="50" y="20" width="313" height="159.66666666666666"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Mdn-Xi-5HV" userLabel="Title + Main Stats Stack View">
-                            <rect key="frame" x="15" y="0.0" width="172.66666666666666" height="134.66666666666666"/>
+                            <rect key="frame" x="15" y="0.0" width="164" height="134.66666666666666"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="REVISION HISTORY" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X37-tk-I1W">
-                                    <rect key="frame" x="0.0" y="0.0" width="172.66666666666666" height="18"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="164" height="18"/>
                                     <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                     <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Ching Shih" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CmX-dP-uFU">
-                                    <rect key="frame" x="0.0" y="27.999999999999996" width="172.66666666666666" height="40.666666666666657"/>
+                                    <rect key="frame" x="0.0" y="27.999999999999996" width="164" height="40.666666666666657"/>
                                     <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6IG-iH-z9d">
-                                    <rect key="frame" x="0.0" y="78.666666666666671" width="172.66666666666666" height="56.000000000000014"/>
+                                    <rect key="frame" x="0.0" y="78.666666666666671" width="164" height="56.000000000000014"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Gq-NM-ZzR">
-                                            <rect key="frame" x="0.0" y="8" width="172.66666666666666" height="48"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="text" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Gq-NM-ZzR">
+                                            <rect key="frame" x="0.0" y="0.0" width="164" height="56"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -55,14 +55,14 @@
                                     <constraints>
                                         <constraint firstItem="5Gq-NM-ZzR" firstAttribute="leading" secondItem="6IG-iH-z9d" secondAttribute="leading" id="8BT-hz-NWi"/>
                                         <constraint firstAttribute="trailing" secondItem="5Gq-NM-ZzR" secondAttribute="trailing" id="Urs-VW-4Tw"/>
-                                        <constraint firstItem="5Gq-NM-ZzR" firstAttribute="top" secondItem="6IG-iH-z9d" secondAttribute="top" constant="8" id="mGM-o5-brC"/>
+                                        <constraint firstItem="5Gq-NM-ZzR" firstAttribute="top" secondItem="6IG-iH-z9d" secondAttribute="top" id="mGM-o5-brC"/>
                                         <constraint firstAttribute="bottom" secondItem="5Gq-NM-ZzR" secondAttribute="bottom" id="mk9-Fp-bgf"/>
                                     </constraints>
                                 </view>
                             </subviews>
                         </stackView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s5E-5Q-AWf" userLabel="Sparkline View" customClass="WMFSparklineView" customModule="WMF">
-                            <rect key="frame" x="212.66666666666671" y="12.000000000000007" width="97.333333333333343" height="122.66666666666669"/>
+                            <rect key="frame" x="204" y="12.000000000000007" width="94" height="122.66666666666669"/>
                         </view>
                     </subviews>
                     <constraints>
@@ -95,9 +95,10 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R7q-YP-Iub" userLabel="Filter Counts Container View">
-                    <rect key="frame" x="44" y="180.33333333333337" width="325" height="203.66666666666663"/>
+                    <rect key="frame" x="50" y="180.33333333333337" width="313" height="203.66666666666663"/>
                 </view>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="Pkx-KC-mKU"/>
             <constraints>
                 <constraint firstItem="zCN-kR-Ul8" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="6qy-O6-hgP"/>
                 <constraint firstItem="REp-2g-3HJ" firstAttribute="top" secondItem="zCN-kR-Ul8" secondAttribute="bottom" id="Pc8-q3-ZPD"/>
@@ -115,8 +116,7 @@
                 <constraint firstAttribute="trailing" secondItem="REp-2g-3HJ" secondAttribute="trailing" id="wWn-3w-uBR"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="Pkx-KC-mKU"/>
-            <point key="canvasLocation" x="136.95652173913044" y="-18.75"/>
+            <point key="canvasLocation" x="136.33004926108376" y="-19.199999999999999"/>
         </view>
     </objects>
 </document>
