--- a/Wikipedia/Code/DiffListUneditedCell.xib
+++ b/Wikipedia/Code/DiffListUneditedCell.xib
@@ -24,20 +24,18 @@
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4mB-lG-lB7">
-                        <rect key="frame" x="112" y="10" width="41.5" height="160"/>
+                        <rect key="frame" x="15" y="20" width="41.5" height="150"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="4mB-lG-lB7" firstAttribute="centerX" secondItem="mLF-DE-uWw" secondAttribute="centerX" id="6mb-Xr-eoI"/>
                     <constraint firstItem="LMj-2g-USx" firstAttribute="leading" secondItem="mLF-DE-uWw" secondAttribute="leading" id="IBZ-FS-as6"/>
                     <constraint firstItem="LMj-2g-USx" firstAttribute="top" secondItem="mLF-DE-uWw" secondAttribute="top" id="Kfl-Ut-HLI"/>
-                    <constraint firstItem="4mB-lG-lB7" firstAttribute="top" secondItem="mLF-DE-uWw" secondAttribute="top" constant="10" id="USS-cQ-YrC"/>
+                    <constraint firstItem="4mB-lG-lB7" firstAttribute="top" secondItem="mLF-DE-uWw" secondAttribute="top" constant="20" id="USS-cQ-YrC"/>
                     <constraint firstAttribute="bottom" secondItem="4mB-lG-lB7" secondAttribute="bottom" constant="10" id="WdL-Sp-fPI"/>
-                    <constraint firstItem="4mB-lG-lB7" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="mLF-DE-uWw" secondAttribute="leading" constant="15" id="XQt-qn-kXT"/>
-                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="4mB-lG-lB7" secondAttribute="trailing" constant="15" id="Xhv-Td-jwE"/>
+                    <constraint firstItem="4mB-lG-lB7" firstAttribute="leading" secondItem="mLF-DE-uWw" secondAttribute="leading" constant="15" id="eq5-JR-glB"/>
                     <constraint firstAttribute="trailing" secondItem="LMj-2g-USx" secondAttribute="trailing" id="s9r-Bh-o5s"/>
                 </constraints>
             </collectionViewCellContentView>
@@ -45,9 +43,8 @@
             <connections>
                 <outlet property="divView" destination="LMj-2g-USx" id="fU6-md-fmQ"/>
                 <outlet property="innerBottomConstraint" destination="WdL-Sp-fPI" id="g8p-Sr-1Sm"/>
-                <outlet property="innerLeadingConstraint" destination="XQt-qn-kXT" id="XZM-1y-aps"/>
+                <outlet property="innerLeadingConstraint" destination="eq5-JR-glB" id="Nzh-vk-GWb"/>
                 <outlet property="innerTopConstraint" destination="USS-cQ-YrC" id="eWp-6Q-eml"/>
-                <outlet property="innerTrailingConstraint" destination="Xhv-Td-jwE" id="ukN-zG-p0e"/>
                 <outlet property="textLabel" destination="4mB-lG-lB7" id="FA0-UI-f5d"/>
             </connections>
             <point key="canvasLocation" x="380.43478260869568" y="10.044642857142856"/>
