--- a/Wikipedia/Code/DiffListChangeCell.xib
+++ b/Wikipedia/Code/DiffListChangeCell.xib
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -51,17 +52,28 @@
                             <constraint firstAttribute="bottom" secondItem="cgQ-ly-f1a" secondAttribute="bottom" id="vFf-dW-RhI"/>
                         </constraints>
                     </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RjG-we-LtZ" userLabel="Div">
+                        <rect key="frame" x="0.0" y="0.0" width="342" height="1"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="YQv-yA-bkF"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
                     <constraint firstItem="OLE-pI-J1X" firstAttribute="top" secondItem="C9r-Gi-A19" secondAttribute="top" constant="10" id="8zL-ha-wmM"/>
+                    <constraint firstItem="RjG-we-LtZ" firstAttribute="leading" secondItem="C9r-Gi-A19" secondAttribute="leading" id="FM6-La-KxY"/>
                     <constraint firstAttribute="bottom" secondItem="OLE-pI-J1X" secondAttribute="bottom" constant="10" id="MbN-1w-lnS"/>
+                    <constraint firstItem="RjG-we-LtZ" firstAttribute="top" secondItem="C9r-Gi-A19" secondAttribute="top" id="NaR-jz-vlW"/>
                     <constraint firstAttribute="trailing" secondItem="OLE-pI-J1X" secondAttribute="trailing" id="XRX-ne-ugt"/>
+                    <constraint firstAttribute="trailing" secondItem="RjG-we-LtZ" secondAttribute="trailing" id="gmI-2l-Udr"/>
                     <constraint firstItem="OLE-pI-J1X" firstAttribute="leading" secondItem="C9r-Gi-A19" secondAttribute="leading" id="oC5-aU-G5R"/>
                 </constraints>
             </collectionViewCellContentView>
             <gestureRecognizers/>
             <size key="customSize" width="342" height="279"/>
             <connections>
+                <outlet property="divView" destination="RjG-we-LtZ" id="KFw-0A-avs"/>
                 <outlet property="headingBottomConstraint" destination="N2y-lE-hNZ" id="Jdm-0w-WQQ"/>
                 <outlet property="headingContainerView" destination="5Fk-fp-646" id="ob4-Dj-5sG"/>
                 <outlet property="headingLabel" destination="1JR-e0-0N3" id="QET-Cg-o06"/>
@@ -82,4 +94,9 @@
             <point key="canvasLocation" x="6" y="43"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
