--- a/Wikipedia/Code/DiffHeaderExtendedView.xib
+++ b/Wikipedia/Code/DiffHeaderExtendedView.xib
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -20,7 +21,6 @@
                 <outlet property="summaryView" destination="HAT-KZ-t9R" id="7Ay-9i-LOv"/>
                 <outletCollection property="divViews" destination="CNr-Gq-8i7" collectionClass="NSMutableArray" id="Tcx-Zb-PJH"/>
                 <outletCollection property="divViews" destination="uqW-gh-yjf" collectionClass="NSMutableArray" id="C6i-Vf-IvE"/>
-                <outletCollection property="divViews" destination="bRi-I9-iMk" collectionClass="NSMutableArray" id="Gre-wo-OYU"/>
                 <outletCollection property="divViews" destination="mT6-vc-UjY" collectionClass="NSMutableArray" id="EYv-zN-m7P"/>
             </connections>
         </placeholder>
@@ -33,41 +33,41 @@
                     <rect key="frame" x="0.0" y="0.0" width="419" height="418"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mT6-vc-UjY" userLabel="Div View">
-                            <rect key="frame" x="0.0" y="0.0" width="419" height="0.5"/>
+                            <rect key="frame" x="0.0" y="0.0" width="419" height="1"/>
                             <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="0.5" id="VJr-iD-oQF"/>
+                                <constraint firstAttribute="height" constant="1" id="VJr-iD-oQF"/>
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" verticalHuggingPriority="249" verticalCompressionResistancePriority="749" placeholderIntrinsicWidth="419" placeholderIntrinsicHeight="82" translatesAutoresizingMaskIntoConstraints="NO" id="HAT-KZ-t9R" customClass="DiffHeaderSummaryView" customModule="Wikipedia">
-                            <rect key="frame" x="0.0" y="0.5" width="419" height="197"/>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <rect key="frame" x="0.0" y="1" width="419" height="195.5"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CNr-Gq-8i7" userLabel="Div View">
-                            <rect key="frame" x="0.0" y="197.5" width="419" height="0.5"/>
+                            <rect key="frame" x="0.0" y="196.5" width="419" height="1"/>
                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="0.5" id="M1Z-0B-8BC"/>
+                                <constraint firstAttribute="height" constant="1" id="M1Z-0B-8BC"/>
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" placeholderIntrinsicWidth="419" placeholderIntrinsicHeight="75" translatesAutoresizingMaskIntoConstraints="NO" id="P65-Vp-V6F" customClass="DiffHeaderEditorView" customModule="Wikipedia">
-                            <rect key="frame" x="0.0" y="198" width="419" height="75"/>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <rect key="frame" x="0.0" y="197.5" width="419" height="75"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uqW-gh-yjf" userLabel="Div View">
-                            <rect key="frame" x="0.0" y="273" width="419" height="0.5"/>
+                            <rect key="frame" x="0.0" y="272.5" width="419" height="1"/>
                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="0.5" id="3pQ-at-YqO"/>
+                                <constraint firstAttribute="height" constant="1" id="3pQ-at-YqO"/>
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" placeholderIntrinsicWidth="419" placeholderIntrinsicHeight="144" translatesAutoresizingMaskIntoConstraints="NO" id="b3T-Zw-2K1" customClass="DiffHeaderCompareView" customModule="Wikipedia">
                             <rect key="frame" x="0.0" y="273.5" width="419" height="144"/>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bRi-I9-iMk" userLabel="Div View">
                             <rect key="frame" x="0.0" y="417.5" width="419" height="0.5"/>
-                            <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="0.5" id="Kyu-Vp-6Dr"/>
                             </constraints>
@@ -75,7 +75,8 @@
                     </subviews>
                 </stackView>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <viewLayoutGuide key="safeArea" id="3Xh-mg-2dz"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="TY2-XA-yot" firstAttribute="leading" secondItem="esC-iO-mp9" secondAttribute="leading" id="LMS-cz-VFW"/>
                 <constraint firstItem="TY2-XA-yot" firstAttribute="top" secondItem="esC-iO-mp9" secondAttribute="top" id="mCU-4l-GZL"/>
@@ -85,8 +86,12 @@
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="3Xh-mg-2dz"/>
             <point key="canvasLocation" x="325.36231884057975" y="-512.27678571428567"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
