--- a/Components/Sources/Components/Components/Editors/Common Views/Input Accessory Views/Expanding/WKEditorToolbarExpandingView.xib
+++ b/Components/Sources/Components/Components/Editors/Common Views/Input Accessory Views/Expanding/WKEditorToolbarExpandingView.xib
@@ -284,8 +284,10 @@
                 <outlet property="increaseIndentionButton" destination="YcQ-k6-ZuB" id="phQ-vm-eKH"/>
                 <outlet property="linkButton" destination="lOp-Bv-UED" id="I7F-zV-jom"/>
                 <outlet property="mediaButton" destination="Oyz-BA-g0g" id="Gxu-b5-3Sp"/>
+                <outlet property="primaryContainerView" destination="BWO-2h-I64" id="8BW-Xe-ftH"/>
                 <outlet property="orderedListButton" destination="Usg-R3-2O9" id="8Qf-xg-gjD"/>
                 <outlet property="scrollView" destination="ZnR-ux-s6T" id="cvF-Ya-s9R"/>
+                <outlet property="secondaryContainerView" destination="51i-1d-Lli" id="RSM-Cp-gEO"/>
                 <outlet property="stackView" destination="ajR-7a-Sik" id="xc8-7a-mMJ"/>
                 <outlet property="templateButton" destination="2n5-hY-lF5" id="diI-p3-Td9"/>
                 <outlet property="unorderedListButton" destination="6o2-fI-FeG" id="Vvj-hr-OPm"/>
