--- a/Components/Sources/Components/Components/Editors/Common Views/Input Accessory Views/Highlight/WKEditorToolbarHighlightView.xib
+++ b/Components/Sources/Components/Components/Editors/Common Views/Input Accessory Views/Highlight/WKEditorToolbarHighlightView.xib
@@ -106,6 +106,15 @@
                 <outlet property="showMoreButton" destination="S8f-CE-8I8" id="QMl-95-ws9"/>
                 <outlet property="stackView" destination="cO2-kj-WCI" id="qel-pE-Y96"/>
                 <outlet property="templateButton" destination="AZa-84-Qdg" id="1Qq-oT-Pfn"/>
+                <outletCollection property="separatorViews" destination="y41-nM-tJB" collectionClass="NSMutableArray" id="HEd-6s-3qe"/>
+                <outletCollection property="separatorViews" destination="a6D-ps-pge" collectionClass="NSMutableArray" id="E2n-Gk-ymt"/>
+                <outletCollection property="buttons" destination="r0e-89-g0a" collectionClass="NSMutableArray" id="7De-sX-Wwd"/>
+                <outletCollection property="buttons" destination="P53-Fl-mVx" collectionClass="NSMutableArray" id="cj2-b3-El6"/>
+                <outletCollection property="buttons" destination="u7b-01-w2H" collectionClass="NSMutableArray" id="fpD-Ig-01q"/>
+                <outletCollection property="buttons" destination="ZgG-w8-2QU" collectionClass="NSMutableArray" id="0dO-4E-fo5"/>
+                <outletCollection property="buttons" destination="ebk-UU-rSu" collectionClass="NSMutableArray" id="POs-mq-Lqk"/>
+                <outletCollection property="buttons" destination="AZa-84-Qdg" collectionClass="NSMutableArray" id="fKl-Bi-tcc"/>
+                <outletCollection property="buttons" destination="mxU-vL-Pqz" collectionClass="NSMutableArray" id="GeG-8Q-Iih"/>
                 <outletCollection property="separatorViews" destination="y41-nM-tJB" collectionClass="NSMutableArray" id="WIb-dE-Qlk"/>
                 <outletCollection property="separatorViews" destination="a6D-ps-pge" collectionClass="NSMutableArray" id="qMX-mH-gT2"/>
                 <outletCollection property="buttons" destination="mxU-vL-Pqz" collectionClass="NSMutableArray" id="gAh-MR-PVI"/>
